crates/analyzer/tests/snapshots/errors__binary_op_add_sign_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `+` operand types are not compatible
  ┌─ [snippet]:5:3
  │
5 │   a + b
  │   ^   ^ this has type `i256`
  │   │    
  │   this has type `u256`


